@@ -20,6 +20,7 @@ def STORE_NAME(op):            return dis.opname[op] == 'STORE_NAME'
 def STORE_GLOBAL(op):          return dis.opname[op] == 'STORE_GLOBAL'
 def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
 def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
+def IMPORT_FROM(op):           return dis.opname[op] == 'IMPORT_FROM'
 def BINARY_SUBSCR(op):         return dis.opname[op] == 'BINARY_SUBSCR'
 def BINARY_ADD(op):            return dis.opname[op] == 'BINARY_ADD'
 def BUILD_LIST(op):            return dis.opname[op] == 'BUILD_LIST'
